about me section/incomplete

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myers, Avery Portfolio </title>
-    <link rel="stylesheet" href="./assets/reset.css">
+    <!-- <link rel="stylesheet" href="./assets/reset.css">  -->
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <!-- Header and NAV links below. -->
     <header class="header">
-        <h1 class="header-title">Avery Myers</h1>
+        <div class="header-title">
+            <h1 class="header-name">Avery Myers</h1>
+        </div>
         <nav>
             <ul>
                 <li>
@@ -30,33 +32,43 @@
         </nav>
     </header>
     <div class="hero"></div>  
-    <main>
-    <section id="about-me">
-      <header>
-        <h2>About Me</h2>
-      </header>
-      <article>
-        <p>...</p>
-      </article>
-    </section>
-  
-    <section id="work">
-      <header>
-        <h2>Work</h2>
-      </header>
-      <article>
-        <p>...</p>
-      </article>
-    </section>
-  
-    <section id="contact-me">
-      <header>
-        <h2>Contact Me</h2>
-      </header>
-      <article>
-        <p>...</p>
-      </article>
-    </section>
-  </main>
+    <main class="main">
+        <section id="about-me-section" class="about-me-section">
+            <header class=about-me-header>
+                <h2>About Me</h2>
+                <div class="about-me-photo">
+                    <img src="portfolio-photo.jpg" alt="Avery Myers photo">
+                </div>
+            </header>
+            <article class="about-me-article">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, odio eget mattis aliquam, dolor orci lacinia massa, vel vehicula orci magna a nisl. Vestibulum id ex lobortis, mattis urna vel, congue risus. Donec euismod ultrices dolor, eget lobortis tellus suscipit a. Sed lobortis massa quis nulla cursus, non vestibulum ante aliquet. Aliquam pulvinar, erat ut lobortis suscipit, nulla nunc tempor eros, quis dignissim massa mauris non ante. Donec eleifend lorem ut ex sagittis fringilla. Sed porttitor aliquam mauris, id imperdiet mauris faucibus vitae. Quisque sit amet ante non ante congue suscipit sed nec sapien
+                </p>
+            </article>
+        </section>
+        
+        <section id="work">
+            <header class="work-header">
+                <h2>Work</h2>
+            </header>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, odio eget mattis aliquam, dolor orci lacinia massa, vel vehicula orci magna a nisl. Vestibulum id ex lobortis, mattis urna vel, congue risus. Donec euismod ultrices dolor, eget lobortis tellus suscipit a. Sed lobortis massa quis nulla cursus, non vestibulum ante aliquet. Aliquam pulvinar, erat ut lobortis suscipit, nulla nunc tempor eros, quis dignissim massa mauris non ante. Donec eleifend lorem ut ex sagittis fringilla. Sed porttitor aliquam mauris, id imperdiet mauris faucibus vitae. Quisque sit amet ante non ante congue suscipit sed nec sapien
+                </p>
+            </article>
+        </section>
+        
+        <section id="contact-me">
+            <header class="contact-me">
+                <h2>Contact Me</h2>
+            </header>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, odio eget mattis aliquam, dolor orci lacinia massa, vel vehicula orci magna a nisl. Vestibulum id ex lobortis, mattis urna vel, congue risus. Donec euismod ultrices dolor, eget lobortis tellus suscipit a. Sed lobortis massa quis nulla cursus, non vestibulum ante aliquet. Aliquam pulvinar, erat ut lobortis suscipit, nulla nunc tempor eros, quis dignissim massa mauris non ante. Donec eleifend lorem ut ex sagittis fringilla. Sed porttitor aliquam mauris, id imperdiet mauris faucibus vitae. Quisque sit amet ante non ante congue suscipit sed nec sapien
+                </p>
+            </article>
+        </section>
+
+    </main>
 </body>
 </html>
