--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myers, Avery Portfolio </title>
     <!-- <link rel="stylesheet" href="./assets/reset.css">  -->
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style2.css">
 </head>
 <body>
     <!-- Header and NAV links below. -->
     <header class="header">
         <div class="header-title">
             <h1 class="header-name">Avery Myers</h1>
+                <div class="header-photo">
+                    <img src="./photos/portfolio-photo.jpg" alt="Avery Myers photo">
+                </div>
         </div>
         <nav>
             <ul>
@@ -25,9 +28,6 @@
                 <li>
                     <a href="#contact-me">Contact Me</a>
                 </li>
-                <li>    
-                    <a href="#Resume">Resume</a>
-                </li>
             </ul>
         </nav>
     </header>
@@ -36,9 +36,6 @@
         <section id="about-me-section" class="about-me-section">
             <header class=about-me-header>
                 <h2>About Me</h2>
-                <div class="about-me-photo">
-                    <img src="portfolio-photo.jpg" alt="Avery Myers photo">
-                </div>
             </header>
             <article class="about-me-article">
                 <p>
@@ -47,28 +44,30 @@
             </article>
         </section>
         
-        <section id="work">
+        <section id="work" class="work">
             <header class="work-header">
                 <h2>Work</h2>
             </header>
             <article>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, odio eget mattis aliquam, dolor orci lacinia massa, vel vehicula orci magna a nisl. Vestibulum id ex lobortis, mattis urna vel, congue risus. Donec euismod ultrices dolor, eget lobortis tellus suscipit a. Sed lobortis massa quis nulla cursus, non vestibulum ante aliquet. Aliquam pulvinar, erat ut lobortis suscipit, nulla nunc tempor eros, quis dignissim massa mauris non ante. Donec eleifend lorem ut ex sagittis fringilla. Sed porttitor aliquam mauris, id imperdiet mauris faucibus vitae. Quisque sit amet ante non ante congue suscipit sed nec sapien
-                </p>
+                <img src="./photos/horiseon-webpage.png" alt="Horiseon webpage" class="horiseon-webpage">
+                <img src="./photos/study-guide.png" alt="Pre Work Study Guide" class="study-guide">
+                <img src="./photos/Calc-photo.jpg" alt="Calculator photo" class="calc-webpage">
             </article>
         </section>
-        
+        <!--  
         <section id="contact-me">
             <header class="contact-me">
                 <h2>Contact Me</h2>
             </header>
             <article>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, odio eget mattis aliquam, dolor orci lacinia massa, vel vehicula orci magna a nisl. Vestibulum id ex lobortis, mattis urna vel, congue risus. Donec euismod ultrices dolor, eget lobortis tellus suscipit a. Sed lobortis massa quis nulla cursus, non vestibulum ante aliquet. Aliquam pulvinar, erat ut lobortis suscipit, nulla nunc tempor eros, quis dignissim massa mauris non ante. Donec eleifend lorem ut ex sagittis fringilla. Sed porttitor aliquam mauris, id imperdiet mauris faucibus vitae. Quisque sit amet ante non ante congue suscipit sed nec sapien
-                </p>
-            </article>
+                <ul>
+                  <li><a href="mailto:averyjmyers@hotmail.com">Email</a></li>
+                  <li><a href="https://www.linkedin.com/in/avery-m-108704110/">LinkedIn</a></li>
+                  <li><a href="https://github.com/AveryJMyers">GitHub</a></li>
+                </ul>
+              </article>
         </section>
-
+      -->
     </main>
 </body>
 </html>
