--- a/index.html
+++ b/index.html
@@ -28,46 +28,71 @@
                 <li>
                     <a href="#contact-me">Contact Me</a>
                 </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
             </ul>
         </nav>
     </header>
     <div class="hero"></div>  
     <main class="main">
+        <!-- Content for About me section -->
         <section id="about-me-section" class="about-me-section">
             <header class=about-me-header>
                 <h2>About Me</h2>
             </header>
             <article class="about-me-article">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, odio eget mattis aliquam, dolor orci lacinia massa, vel vehicula orci magna a nisl. Vestibulum id ex lobortis, mattis urna vel, congue risus. Donec euismod ultrices dolor, eget lobortis tellus suscipit a. Sed lobortis massa quis nulla cursus, non vestibulum ante aliquet. Aliquam pulvinar, erat ut lobortis suscipit, nulla nunc tempor eros, quis dignissim massa mauris non ante. Donec eleifend lorem ut ex sagittis fringilla. Sed porttitor aliquam mauris, id imperdiet mauris faucibus vitae. Quisque sit amet ante non ante congue suscipit sed nec sapien
+                    
+Hi, I'm Avery Myers. I worked as a real estate salesperson and managed shipping for a foreign food retailer. However, I have decided to pursue my passion for technology and I am currently attending a full-stack coding bootcamp through UC Berkeley.
+
+During the bootcamp, I am learning essential coding skills such as HTML, CSS, and Javascript. I am finding that I truly enjoy learning about programming and how it's implemented in our everyday lives. The more I learn, the more I realize that I want to build a career in software development.
+
+As a software developer, I am excited to use my skills to create solutions that make people's lives easier and more efficient. Whether it's building a website that helps a business grow or developing an app that solves a problem, I am passionate about the impact that technology can have on our world.
+
+Thanks for taking the time to read my profile. If you're interested in connecting, feel free to reach out to me on LinkedIn or GitHub. I look forward to connecting with you!
                 </p>
             </article>
         </section>
-        
+        <!-- content for work section -->
         <section id="work" class="work">
             <header class="work-header">
                 <h2>Work</h2>
             </header>
             <article>
-                <img src="./photos/horiseon-webpage.png" alt="Horiseon webpage" class="horiseon-webpage">
-                <img src="./photos/study-guide.png" alt="Pre Work Study Guide" class="study-guide">
-                <img src="./photos/Calc-photo.jpg" alt="Calculator photo" class="calc-webpage">
+                <a href="https://averyjmyers.github.io/challenge_1_Website_Revamp"><img src="./photos/horiseon-webpage.png" alt="Horiseon webpage" class="horiseon-webpage" title="Horiseon Homepage"></a>
+                <a href ="https://averyjmyers.github.io/prework-study-guide"> <img src="./photos/study-guide.png" alt="Pre Work Study Guide" class="study-guide" title="Study Guide"></a>
+                <a href="https://averyjmyers.github.io/challenge_3_js_calc"><img src="./photos/Calc-photo.jpg" alt="Calculator photo" class="calc-webpage" title="Calculator"></a>
             </article>
         </section>
-        <!--  
-        <section id="contact-me">
-            <header class="contact-me">
-                <h2>Contact Me</h2>
+        <!-- Resume -->
+        <section id="resume" class="resume">
+            <header class="resume-header">
+                <h2>Resume</h2>
             </header>
             <article>
                 <ul>
-                  <li><a href="mailto:averyjmyers@hotmail.com">Email</a></li>
-                  <li><a href="https://www.linkedin.com/in/avery-m-108704110/">LinkedIn</a></li>
-                  <li><a href="https://github.com/AveryJMyers">GitHub</a></li>
+                    <li>Kennedy Holdings Inc: 2014-Present<br>
+                    (Warehouse manager, Sales and Marketing Manager)</li>
+                    <li>Real Estate Services 2019-2023<br>(Residential, Buyer's Agent)</li>
                 </ul>
-              </article>
+            </article>    
         </section>
-      -->
+        <!--content for work section  -->
+        <section id="contact-me" class="contact-me">
+            <header class="contact-me-header">
+                <h2>Contact Me</h2>
+            </header>
+            <article class="logo">
+                <ul>
+                  <li><a href="mailto:averyjmyers@hotmail.com"><img src="./photos/emaii-logo.png" alt="email logo"></a></li>
+                  <li><a href="https://www.linkedin.com/in/avery-m-108704110/"> <img src="./photos/LinkedIn_logo_initials.png" alt="LinkedIn logo"> </a></li>
+                  <li><a href="https://github.com/AveryJMyers"><img src="photos/github.png" alt=Github logo></a></li>
+                  <li><a href="tel:123-456-7890"><img src="./photos/cell-phone-icon.png"></a></li>
+                </ul>
+            </article>
+        </section>
+
     </main>
 </body>
 </html>
