--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Thanks for taking the time to read my profile. If you're interested in connectin
             <article>
                 <a href="https://averyjmyers.github.io/challenge_1_Website_Revamp"><img src="./photos/horiseon-webpage.png" alt="Horiseon webpage" class="horiseon-webpage" title="Horiseon Homepage"></a>
                 <a href ="https://averyjmyers.github.io/prework-study-guide"> <img src="./photos/study-guide.png" alt="Pre Work Study Guide" class="study-guide" title="Study Guide"></a>
-                <a href="https://averyjmyers.github.io/challenge_3_js_calc"><img src="./photos/Calc-photo.jpg" alt="Calculator photo" class="calc-webpage" title="Calculator"></a>
+                <a href="https://averyjmyers.github.io/challenge_3_js_calc"><img src="./photos/calc-photo.jpg" alt="Calculator photo" class="calc-webpage" title="Calculator"></a>
             </article>
         </section>
         <!-- Resume -->
