--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Thanks for taking the time to read my profile. If you're interested in connectin
                 <h2>Work</h2>
             </header>
             <article>
-                <a href="https://averyjmyers.github.io/challenge_1_Website_Revamp"><img src="./photos/lootVault.png" alt="Horiseon webpage" class="horiseon-webpage" title="Loot Vault"></a>
+                <a href="https://torvec.github.io/project_1_Loot_Vault/"><img src="./photos/lootVault.png" alt="Horiseon webpage" class="horiseon-webpage" title="Loot Vault"></a>
                 <a href ="https://averyjmyers.github.io/prework-study-guide"> <img src="./photos/study-guide.png" alt="Pre Work Study Guide" class="study-guide" title="Study Guide"></a>
                 <a href="https://averyjmyers.github.io/challenge_3_js_calc"><img src="./photos/calc-photo.jpg" alt="Calculator photo" class="calc-webpage" title="Calculator"></a>
             </article>
