fixed new project route for fina project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Thanks for taking the time to read my profile. If you're interested in connectin
             <article>
                 <a href="https://torvec.github.io/project_1_Loot_Vault/"><img src="./photos/lootVault.png" alt="Horiseon webpage" class="horiseon-webpage" title="Loot Vault"></a>
                 <a href ="https://task-titan-bec51c55ebe5.herokuapp.com/"> <img src="./photos/f82f82c9a946525a06f333f0697416bd.jpg" alt="task-titan" class="study-guide" title="Study Guide"></a>
-                <a href="https://averyjmyers.github.io/challenge_3_js_calc"><img src="./photos/0199e61945d6f3bc6fb1e8afb824e866.jpg" alt="Calculator photo" class="calc-webpage" title="Calculator"></a>
+                <a href="https://wedloc-84c89e3ae29d.herokuapp.com/"><img src="./photos/0199e61945d6f3bc6fb1e8afb824e866.jpg" alt="Calculator photo" class="calc-webpage" title="Calculator"></a>
             </article>
         </section>
         <!-- Resume -->
